--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/fillipeazevedo95/CRUD-API/issues"
   },
-  "homepage": "https://github.com/fillipeazevedo95/CRUD-API#readme"
+  "homepage": "https://github.com/fillipeazevedo95/CRUD-API#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.13"
+  }
 }
