--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
+    "morgan-body": "^2.6.6",
     "nodemon": "^2.0.15"
   }
 }
