instalação do pm2 para modo de produção e edição do arquivo readme.md

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "test": "nodemon server.js",
+    "production": "pm2 start server.js"
   },
   "repository": {
     "type": "git",
