--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "production": "pm2 start server.js"
+    "production": "pm2 start server.js",
+    "eslint": "*/.js --ignore-pattern node_modules/"
   },
   "repository": {
     "type": "git",
@@ -33,5 +34,13 @@
     "pino": "^7.5.0",
     "pino-http": "^6.3.3",
     "pino-pretty": "^7.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0"
   }
 }
