--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "production": "pm2 start server.js",
-    "eslint": "*/.js --ignore-pattern node_modules/"
+    "lint": "eslint */.js --ignore-pattern node_modules/"
   },
   "repository": {
     "type": "git",
