--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS='--experimental-specifier-resolution=node' nodemon src/server.js",
+    "dev": "nodemon --experimental-specifier-resolution=node src/server.js",
     "production": "pm2 start server.js",
     "lint": "eslint *.js --ignore-pattern node_modules/"
   },
@@ -30,18 +30,19 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
+    "mongoose-unique-validator": "^3.0.0",
     "morgan-body": "^2.6.6",
     "pino": "^7.5.0",
     "pino-http": "^6.3.3",
     "pino-pretty": "^7.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0"
+    "eslint-plugin-promise": "^5.2.0",
+    "nodemon": "^2.0.15"
   }
 }
